--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,10 +1,30 @@
 html{
   background-color: black;
-}
-h1{
   color: white;
+  font-family: "Verdana";
+  text-align: center;
 }
 
-.billboard{
-  text-align: center;
+h1{
+  font-size: 50px;
+  font-weight: normal;
+}
+
+h2{
+  font-size: 42px;
+  font-weight: normal;
+}
+
+a{
+  color: Aquamarine;
+  font-size: 16px;
+}
+
+p{
+    color: gray;
+    font-size: 21px;
+}
+
+.alignright{
+  text-align: right;
 }
